--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <groupId>com.amy.springboot</groupId>
     <artifactId>springboot-learn</artifactId>
     <version>1.0-SNAPSHOT</version>
-    <packaging>war</packaging>
+    <!--<packaging>war</packaging>-->
 
     <!-- Inherit defaults from Spring Boot -->
     <parent>
