--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,9 +7,9 @@ rancoo.name=www.rancoo4.com
 rancoo.desc=${rancoo.name} is a domain name
 
 # 配置server端口
-server.port=8010
+server.port=8090
 
 # 时间格式化
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-# 时区
-spring.jackson.time-zone=Asia/Shanghai
+# 时区，默认零时区
+spring.jackson.time-zone=GMT
