--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,24 @@
 #在同一目录下,properties配置优先级> YAML配置优先级
+# 在yaml设置的profile，properties文件也可以读到
+spring:
+    profiles:
+      active: prod
+
+# yaml在配置文件中添加三个英文状态的短横线即可区分不同的profile
+---
+spring:
+    profiles: dev
 server:
-    port: 8020
+  port: 8080
+
+---
+spring:
+    profiles: test
+server:
+  port: 8081
+
+---
+spring:
+    profiles: prod
+server:
+  port: 8082
