--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 # 32位随机数
-rancoo.secret=${random.value}
-rancoo.number=${random.int}
+learnboot.secret=${random.value}
+learnboot.number=${random.int}
 
 # 属性占位符使用，在优先级最低--4
-rancoo.name=www.rancoo4.com
-rancoo.desc=${rancoo.name} is a domain name
+learnboot.name=www.learnboot4.com
+learnboot.desc=${learnboot.name} is a domain name
 
 # 配置server端口
 server.port=8090
