--- a/application.properties
+++ b/application.properties
@@ -1,4 +1,4 @@
 # 测试application.properties文件优先级。
-# 此处配置的rancoo.desc将会覆盖根路径下的rancoo.desc的值
+# 此处配置的learnboot.desc将会覆盖根路径下的learnboot.desc的值
 # 优先级第2
-rancoo.name=www.rancoo2.com
+learnboot.name=www.learnboot2.com
