--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -2,7 +2,7 @@
 # 在yaml设置的profile，properties文件也可以读到
 spring:
     profiles:
-      active: test
+      active: prod
 
 # yaml在配置文件中添加三个英文状态的短横线即可区分不同的profile
 ---
@@ -23,3 +23,5 @@ spring:
     profiles: prod
 server:
   port: 8082
+learnboot:
+    desc: ${learnboot.name} is a domain-prod name
