6-9 模板引擎 & 静态资源控制

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,3 +13,18 @@ server.port=8090
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
 # 时区，默认零时区
 spring.jackson.time-zone=GMT
+
+#freemarker,该属性便于ftl文件热部署
+spring.freemarker.cache=false
+#freemarker文件后缀名
+spring.freemarker.suffix=.ftl
+#freemarker文件模板load路径
+spring.freemarker.template-loader-path=classpath:/templates/
+#freemarker模板编码
+spring.freemarker.charset=UTF-8
+#freemarker content type
+spring.freemarker.content-type=text/html
+#静态资源文件path测试。如果这样设置，访问静态资源需要在前加/static,如 localhost:8080/static/demo.png
+#spring.mvc.static-path-pattern=/static/**
+#映射的静态资源文件地址
+spring.resources.static-locations=classpath:/static/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/public/
