--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,30 +1,33 @@
-# 32位随机数
+# 32\u4F4D\u968F\u673A\u6570
 learnboot.secret=${random.value}
 learnboot.number=${random.int}
 
-# 属性占位符使用，在优先级最低--4
+# \u5C5E\u6027\u5360\u4F4D\u7B26\u4F7F\u7528\uFF0C\u5728\u4F18\u5148\u7EA7\u6700\u4F4E--4
 learnboot.name=www.learnboot4.com
 learnboot.desc=${learnboot.name} is a domain name
 
-# 配置server端口
+# \u914D\u7F6Eserver\u7AEF\u53E3
 server.port=8090
 
-# 时间格式化
+# \u65F6\u95F4\u683C\u5F0F\u5316
 spring.jackson.date-format=yyyy-MM-dd HH:mm:ss
-# 时区，默认零时区
+# \u65F6\u533A\uFF0C\u9ED8\u8BA4\u96F6\u65F6\u533A
 spring.jackson.time-zone=GMT
 
-#freemarker,该属性便于ftl文件热部署
+#freemarker,\u8BE5\u5C5E\u6027\u4FBF\u4E8Eftl\u6587\u4EF6\u70ED\u90E8\u7F72
 spring.freemarker.cache=false
-#freemarker文件后缀名
+#freemarker\u6587\u4EF6\u540E\u7F00\u540D
 spring.freemarker.suffix=.ftl
-#freemarker文件模板load路径
+#freemarker\u6587\u4EF6\u6A21\u677Fload\u8DEF\u5F84
 spring.freemarker.template-loader-path=classpath:/templates/
-#freemarker模板编码
+#freemarker\u6A21\u677F\u7F16\u7801
 spring.freemarker.charset=UTF-8
 #freemarker content type
 spring.freemarker.content-type=text/html
-#静态资源文件path测试。如果这样设置，访问静态资源需要在前加/static,如 localhost:8080/static/demo.png
+#\u9759\u6001\u8D44\u6E90\u6587\u4EF6path\u6D4B\u8BD5\u3002\u5982\u679C\u8FD9\u6837\u8BBE\u7F6E\uFF0C\u8BBF\u95EE\u9759\u6001\u8D44\u6E90\u9700\u8981\u5728\u524D\u52A0/static,\u5982 localhost:8080/static/demo.png
 #spring.mvc.static-path-pattern=/static/**
-#映射的静态资源文件地址
+#\u6620\u5C04\u7684\u9759\u6001\u8D44\u6E90\u6587\u4EF6\u5730\u5740
 spring.resources.static-locations=classpath:/static/,classpath:/META-INF/resources/,classpath:/resources/,classpath:/public/
+# InternalResourceViewResolver\u914D\u7F6E\u3002
+# spring.mvc.view.prefix= /
+# spring.mvc.view.suffix=.html
